<resources>
    <string name="app_name">Линзы сегодня</string>
    <string name="add_lenses">Добавить линзы</string>
    <string name="delete_lenses">Удалить линзы</string>
    <string name="input_lenses_title">Название линз</string>
    <string name="input_replacement_period">Срок замены</string>
    <string name="input_lenses_already_wear">Уже носил</string>
    <string name="lenses_name">Название: %1$s</string>
    <string name="replacement_period">Срок замены: %1$d</string>
    <string name="already_wear">Уже носил: %1$d</string>
    <string name="create_lenses">Создать</string>
    <string name="cancel_creation">Отменить</string>
    <string name="delete">Удалить</string>
    <string name="wear_anyway">Носить</string>
    <string name="main_menu">Главное меню</string>
    <string name="lenses_today">Линзы сегодня</string>
    <string name="press_button_to_add_new_lenses">Линзы ещё не добавлены.\nНажмите \"+\" чтобы добавить новые линзы</string>
    <string name="empty_input_error">Поле не должно быть пустым!</string>
    <string name="faulty_input_error">Срок ношения больше или равен сроку замены!</string>
    <string name="new_lenses">Новые линзы</string>
    <string name="deleting_lenses">Удаление линз</string>
    <string name="are_you_want_to_delete_lenses">Вы уверены что хотите удалить линзы?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="are_you_wearing_lenses_today">Напомните,\nносите ли Вы сегодня линзы?</string>
    <string name="decided_to_not_wear">Передумали носить?</string>
    <string name="decided_to_wear">Решили носить?</string>
    <string name="r_u_rly_decided_to_not_wear">Всё же передумали носить сегодня линзы?</string>
    <string name="r_u_rly_decided_to_wear">Всё же решили носить сегодня линзы?</string>
    <string name="lenses_replacement">Замена линз</string>
    <string name="warning_lenses_overwearing">Внимание! Линзы пора менять. Дальнейшее ношение вредит глазам. Перенашивание: %1$d дн.</string>
</resources>